[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "img2jess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.19.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
]

[tool.hatch.build.targets.wheel]
packages = ["img2jess"]
